Fixed overflow issue

--- a/index.css
+++ b/index.css
@@ -7,6 +7,7 @@
 }
 
 body {
+    width: 100%;
     background: black;
     margin: 0;
     padding: 0;
@@ -564,6 +565,7 @@ body {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        width: auto;
     }
 }
 
